--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             poetry config virtualenvs.path ~/work/calcdemo/
             poetry install
 
-      - save_cahce:
+      - save_cache:
           key: deps-{{ checksum "poetry.lock" }}
           paths:
             - .
