--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: Install Dependencies
           command: |
-            poetry config virtualenvs.path ~/work/calcdemo/
+            poetry config virtualenvs.path ~/
             poetry install
 
       - save_cache:
