--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,10 @@ jobs:
     steps:
       - checkout
 
-      - run: ls -la
+      - run: |
+           pwd
+           ls -la
+           ls -la work
 
       - restore_cache:
           keys:
