edit circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
            pwd
            ls -la
            ls -la work
+           cd work/calcdemo
 
       - restore_cache:
           keys:
