--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,30 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/test-env
     docker:
       - image: circleci/python:3.9.5
     steps:
       - checkout
 
+      - run:
+          working_directory: ~/work/calcdemo/
+
       - run: |
            pwd
            ls -la
-           ls -la work
-           cd work/calcdemo
 
       - restore_cache:
           keys:
-            - deps-{{ checksum "work/calcdemo/poetry.lock" }}
+            - deps-{{ checksum "poetry.lock" }}
 
       - run:
           name: Install Dependencies
           command: poetry install
 
       - save_cache:
-          key: deps-{{ checksum "work/calcdemo/poetry.lock" }}
+          key: deps-{{ checksum "poetry.lock" }}
           paths:
-            - ./work/calkdemo/
+            - ./
 
       - run:
           name: Exec pytest
