--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,17 +12,17 @@ jobs:
 
       - restore_cache:
           keys:
-            - deps-{{ checksum "~/work/calcdemo/poetry.lock" }}
+            - deps-{{ checksum "~/project/work/calcdemo/poetry.lock" }}
 
       - run:
-          working_directory: ~/work/calcdemo/
+          working_directory: ~/project/work/calcdemo/
           name: Install Dependencies
           command: poetry install
 
       - save_cache:
-          key: deps-{{ checksum "~/work/calcdemo/poetry.lock" }}
+          key: deps-{{ checksum "~/project/work/calcdemo/poetry.lock" }}
           paths:
-            - ~/work/calcdemo/
+            - ~/project/work/calcdemo/
 
       - run:
           name: Exec pytest
