edit circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,6 @@ jobs:
     steps:
       - checkout
 
-      - run: |
-           pwd
-           ls -la ~/
-
       - restore_cache:
           keys:
             - deps-{{ checksum "~/project/work/calcdemo/poetry.lock" }}
@@ -28,7 +24,7 @@ jobs:
           name: Exec pytest
           working_directory: ~/project/work/calcdemo/
           command: |
-            poetry run pytest -v ./tests/* --cov=. --cov-report=html
+            poetry run pytest --cov=. --cov-report=html
             cp -r htmlcov /tmp/
 
       - store_artifacts:
